# Handtokening

./: .gitignore  README.md  SECURITY.md  client.py  manage.py  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
ansible_roles/handtokening/defaults/: main.yml
ansible_roles/handtokening/handlers/: main.yml
ansible_roles/handtokening/tasks/: main.yml  nginx.yml  setup-Archlinux.yml  setup-ClamAV.yml  setup-Debian.yml  variables.yml
ansible_roles/handtokening/templates/: env.j2  handtokening-pcsc.rules.j2  handtokening.service.j2  handtokening.socket.j2  run-ht.j2  start.sh.j2
ansible_roles/handtokening/templates/nginx/: handtokening.conf.j2
ansible_roles/handtokening/vars/: Archlinux.yml  Debian.yml  main.yml
handtokening/: asgi.py  wsgi.py
handtokening/clients/: admin.py  models.py
handtokening/clients/management/commands/: rotate_client_secret.py
handtokening/clients/tests/: test_middleware.py
handtokening/settings/: base.py  local.py  prod.py
handtokening/signing/: apps.py  conf.py  external_value.py  osslsigncode.py  views.py
handtokening/signing/tests/: test_signing.py
src/clients/: admin.py  authentication.py
src/handtokening/: asgi.py  settings.py  shell.py  urls.py  wsgi.py
src/handtokening/clients/: admin.py  authentication.py  models.py
src/handtokening/settings/: local.py  prod.py
src/handtokening/signing/: admin.py  apps.py  conf.py  external_value.py  models.py  urls.py  views.py  virustotal.py
src/signing/: admin.py  apps.py  external_value.py  models.py  views.py
(+1 files in other folders)
