[project]
name = "handtokening"
version = "0.2.1"
description = "Code-signing server built in Python/Django"
readme = "README.md"
authors = [
    { name = "Dexter Castor Döpping", email = "dexter.c.dopping@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-ipware>=7.0.1",
    "djangorestframework>=3.16.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.9",
]

[tool.ruff.lint.per-file-ignores]
"**/handtokening/settings/*.py" = ["F403"]
